apps/offby1-cc/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: offby1-cc
  labels:
    pod-security.kubernetes.io/enforce: restricted
    gateway.0xc0.cc/web: "true"
    vault.0xc0.cc/apps: "true"
